--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
   <div id="app"></div>
+  <script>
+    // Production WebSocket URL (automatically used in production)
+    window.__WS_URL__ = "wss://labyrinth-game-41hs.onrender.com";
+  </script>
   <script type="module" src="./dist/front/main.js"></script>
 </body>
 </html>
