change tab title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>Screen Test</title>
+  <title>ラビリンス　紙と鉛筆でできる迷路ゲーム</title>
   <link rel="stylesheet" href="./dist/styles/global.css" />
   <link rel="stylesheet" href="./dist/styles/screens.css" />
   <link rel="stylesheet" href="./dist/styles/components.css" />
