change html style

--- a/index.html
+++ b/index.html
@@ -2,7 +2,23 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>ラビリンス　紙と鉛筆でできる迷路ゲーム</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="ラビリンスはオンラインで楽しむ迷路ゲーム。紙と鉛筆でできる伝統的なゲームをデジタル化。友達と対戦して相手の迷路をクリアを目指そう。" />
+  <meta name="keywords" content="迷路ゲーム,オンライン対戦,ラビリンス,パズルゲーム,脳トレ,友達と遊ぶ" />
+  <meta name="theme-color" content="#ffffff" />
+  <title>ラビリンス 紙と鉛筆でできる迷路ゲーム オンライン対戦</title>
+  
+  <!-- Open Graph (SNS共有用) -->
+  <meta property="og:title" content="ラビリンス - オンライン対戦迷路ゲーム" />
+  <meta property="og:description" content="友達との対戦でお互いの迷路をクリアを目指すオンラインゲーム" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://labyrinth-game-41hs.onrender.com/" />
+  
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="ラビリンス - オンライン対戦迷路ゲーム" />
+  <meta name="twitter:description" content="紙と鉛筆で遊ぶ伝統的な迷路ゲームをオンラインで楽しもう" />
+  
   <link rel="stylesheet" href="./dist/styles/global.css" />
   <link rel="stylesheet" href="./dist/styles/screens.css" />
   <link rel="stylesheet" href="./dist/styles/components.css" />
